Added some equations to parcelx()

--- a/parcelx_tests.ipynb
+++ b/parcelx_tests.ipynb
@@ -1,6 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Current Formulas for CAPE & CIN Calculations in SHARPpy:\n",
+    "\n",
+    "$CAPE = \\int_{z_0}^{z=EL} g \\frac{T_{v,p} - T_{v,e}}{T_{v,e}} dz $\n",
+    "\n",
+    "$\n",
+    "CIN = \\left\\{\n",
+    "        \\begin{array}{ll}\n",
+    "            0 & \\quad CAPE = 0 \\\\\n",
+    "            \\int_{z_0}^{z=LCL} g \\frac{T_{v,p} - T_{v,e}}{T_{v,e}} dz + \\int_{z=LCL}^{z=z(p=500 mb)} g \\frac{T_{v,p} - T_{v,e}}{T_{v,e}} dz  & \\quad CAPE > 0\n",
+    "        \\end{array}\n",
+    "    \\right.\n",
+    "$\n",
+    "\n",
+    "$z_0$ : the height of where the parcel is lifted from \n",
+    "\n",
+    "$dz$ : the layer over which the integration is taking place \n",
+    "\n",
+    "$z=EL$ : the equilibrium level or the last location where the parcel experiences negative buoyancy)\n",
+    "\n",
+    "$z=LFC$ : the highest location in the parcel trace where the parcel becomes positively buoyant."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {
@@ -829,8 +855,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
